# MimeArchiveFS-py

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  HISTORY.md  PLAN.md  README.md  RELEASE_GUIDE.md  TODO.md  WORKFLOWS_SETUP.md  check_toml.py  llms.txt  pyproject.toml  pytest.ini
.github/workflows/: binaries.yml  ci.yml  main.yml  release.yml
.specstory/: .project.json
.specstory/history/: 2025-04-23_13-06-python-package-specification-for-mimearchivefs.md  2025-04-23_13-17-package-implementation-guidance.md  2025-04-23_14-48-codebase-analysis-and-todo-list-update.md  2025-04-23_14-52-implementing-todo-in-markdown.md  2025-04-23_16-37-implementing-todo-tasks.md  2025-04-24_11-26-location-of-@tests-folder.md  2025-04-24_11-28-shell-commands-for-archive-management.md  2025-04-24_11-41-python-package-execution-error.md  2025-04-25_11-25-optimizing-mime-archive-encoding-methods.md  2025-04-25_11-36-expected-behavior-of-mimearchivefs-pack-command.md  2025-04-25_11-48-python-command-for-packing-files.md  2025-04-25_12-03-mime-archive-packing-issues.md  2025-04-25_15-23-minimizing-logic-in-cli-code-structure.md
cli/: main.py
examples/: README.md  basic_usage.py  mimearchivefs_cli.py  mimearchivefs_cli_examples.sh
scripts/: build.sh  dev-setup.sh  release.sh  test.sh
src/mimearchivefs/: __init__.py  __main__.py  archive.py  cli.py  core.py  exceptions.py  filesystem.py  operations.py  utils.py
src/my_package/: main.py
test_files/: sample.html  style.css  test.txt
tests/: conftest.py  test_core.py  test_filesystem.py  test_integration.py  test_main.py  test_package.py  test_utils.py
